--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
     <main>
         <section id="login">
             <div id="imagem">
+                <img src="imagens/pexels-tanya-gomes-13183160 (1).jpg" alt="">
 
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
                 <form action="login.php" method="post"></form>
+                
+                <div>
+                    <input type="email" name="usuario" id="iusuario"></div>
+                <div>
+                    <input type="password" name="senha" id="isenha">
+                </div>
+
+                <div>
+                    <input type="submit" value="entrar">
+                    <input type="submit" value="esqueci a senha">
+                </div>
+
 
             </div>
 
